# thermo

./: .gitignore  LICENSE  README.md
thermo_continuous/: CMakeLists.txt  thermo_cont.cpp
thermo_continuous_16bit/: CMakeLists.txt  thermo_cont_16bit.cpp
thermo_experiment/: CMakeLists.txt  thermo.cpp
